@@ -176,17 +176,9 @@ static void lineprof(char* buf, SEXP srcref)
     }
 }
 
-/* FIXME: This should be done wih a proper configure test, also making
-   sure that the pthreads library is linked in. LT */
-#ifndef Win32
-#if (defined(__APPLE__) || defined(_REENTRANT) || defined(HAVE_OPENMP)) && \
-     ! defined(HAVE_PTHREAD)
-# define HAVE_PTHREAD
-#endif
-#ifdef HAVE_PTHREAD
+#if !defined(Win32) && defined(HAVE_PTHREAD)
 # include <pthread.h>
 static pthread_t R_profiled_thread;
-# endif
 #endif
 
 static void doprof(int sig)  /* sig is ignored in Windows */
